<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:columnCount="4"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/monitor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal"
        android:textSize="@dimen/textview_text_size"
        android:textAlignment="viewEnd"
        android:padding="@dimen/textview_padding"
        tools:text="@string/sometext"
        tools:ignore="RtlCompat"
        android:background="@color/white"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_key_del"
        android:text="@string/key_del"
        style="@style/MyButtonStyle.Actions" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_key_pow"
        android:text="@string/key_sqr"
        style="@style/MyButtonStyle.Actions" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_key_sqrt"
        android:text="@string/key_sqrt"
        style="@style/MyButtonStyle.Actions" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_key_add"
        android:text="@string/key_add"
        style="@style/MyButtonStyle.Actions" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_key_1"
        android:text="@string/key_1"
        style="@style/MyButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_key_2"
        android:text="@string/key_2"
        style="@style/MyButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_key_3"
        android:text="@string/key_3"
        style="@style/MyButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_key_sub"
        android:text="@string/key_sub"
        style="@style/MyButtonStyle.Actions"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_key_4"
        android:text="@string/key_4"
        style="@style/MyButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_key_5"
        android:text="@string/key_5"
        style="@style/MyButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_key_6"
        android:text="@string/key_6"
        style="@style/MyButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_key_mult"
        android:text="@string/key_mult"
        style="@style/MyButtonStyle.Actions"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_key_7"
        android:text="@string/key_7"
        style="@style/MyButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_key_8"
        android:text="@string/key_8"
        style="@style/MyButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_key_9"
        android:text="@string/key_9"
        style="@style/MyButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_key_div"
        android:text="@string/key_div"
        style="@style/MyButtonStyle.Actions"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_key_0"
        android:text="@string/key_0"
        style="@style/MyButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_key_dot"
        android:text="@string/key_dot"
        style="@style/MyButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_key_sign"
        android:text="@string/key_sign"
        style="@style/MyButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_key_equal"
        android:text="@string/key_equal"
        style="@style/MyButtonStyle.Actions"/>

</GridLayout>